@@ -1,3 +1,3 @@
 title run-minecraft
-java -Xms1024M -XX:MaxPermSize=256M -Xmx2048M -jar server.jar 
+java -Xmx2G -XX:+UseParNewGC -XX:SurvivorRatio=2 -XX:+DisableExplicitGC -XX:ParallelGCThreads=4 -d64 -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalPacing -XX:+AggressiveOpts -server -XX:+AggressiveOpts -XX:+UseFastAccessorMethods -Dforge.forceNoStencil=true -jar server.jar 
 pause
